# pjh_result

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic.cpp  custom_error.cpp  error_prop.cpp  option_basic.cpp  option_chain.cpp  option_interop.cpp  pipeline.cpp  void_result.cpp
include/: pjh_result.hpp
include/pjh/: option.hpp  result.hpp
include/pjh_result/: errors.hpp  interop.hpp  macros.hpp  option.hpp  result.hpp
include/pjh_result/detail/: traits.hpp
tests/: CMakeLists.txt  test_combinators.cpp  test_compare.cpp  test_construct.cpp  test_interop.cpp  test_lifetime.cpp  test_macros.cpp  test_option_combinators.cpp  test_option_compare.cpp  test_option_construct.cpp  test_option_interop.cpp  test_option_lifetime.cpp  test_option_mutate.cpp  test_option_unwrap.cpp  test_option_void.cpp  test_query.cpp  test_smoke.cpp  test_unwrap.cpp  test_void.cpp
tests/compile_fail/: option_throwing_move.cpp  throwing_move.cpp
tests/support/: instrumented.hpp
